--- a/README.ipynb
+++ b/README.ipynb
@@ -44,7 +44,7 @@
     "    - [Make Prediction](Notebooks/Make_Prediction.ipynb)\n",
     "    - [Visualizations](Notebooks/Visualizations)\n",
     "\n",
-    "- [Presentation](Presentation/Mod_2_Project.pdf)\n",
+    "- [Presentation](Presentation/WATER.pdf) [Presentation](Presentation/WATER_presentation.ppf)\n",
     "\n",
     "\n",
     "\n",
@@ -56,18 +56,16 @@
     "    2. Data Understanding\n",
     "    3. Data Limitations\n",
     "    \n",
-    "4. Predictive Analysis\n",
-    "    1. Our Model\n",
-    "    2. Feature Importance\n",
-    "    3. Model Performance\n",
+    "3. [Predictive Analysis](#Predictive-Analysis)\n",
+    "    1. [Performance Metric](Performance-Metric)\n",
+    "    2. [Model Selection](#Model-Selection)\n",
+    "    3. [Feature Importance](#Feature-Importance)\n",
     "    \n",
-    "5. Conclusion & Takaways:\n",
+    "4. [Conclusion & Takeaways](Conclusions-and-Takeaways)\n",
     "    1. Improvement Areas\n",
     "    2. Growth Opportunities\n",
     "    3. Takeaways\n",
     "\n",
-    "3. [Feature Engineering](#Feature-Engineering)\n",
-    "4. [Model & Prediction](#Model-&-Prediction)\n",
     "5. [Conclusions](#Conclusions)\n",
     "6. [Further Steps](#Further-Steps)\n",
     "7. [Project Info](#Project-Info)\n",
@@ -118,12 +116,12 @@
     "\n",
     "Overall, the data provided included the sales price and other information for around 21,000 houses sold between May 2014 and My 2015.\n",
     "\n",
-    "An overall map of the data:\n",
-    "![King County House Sales](Images/location.png)\n",
+    "An overall map of Tanzania, with the functional, needs repair, and nonfunctional categories\n",
+    "![Functionality Map](Images/geographical_viz.png)\n",
     "\n",
-    "The distribution of prices looked like this:\n",
+    "The distribution of functionalities looked like this:\n",
     "\n",
-    "![Price Histogram](Images/price.png)\n",
+    "![Distribution](Images/distributions.png)\n",
     "\n",
     "### Data Categories\n",
     "####  Geographical\n",
@@ -167,113 +165,85 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering\n",
-    "Given the categories of data listed above, we selected certain factors within the dataset, and created or found new features that would help to create a more accurate pricing model. The new features were:\n",
+    "## Predictive Analysis\n",
     "\n",
-    "1. Defining top school districts\n",
-    "2. Creating a \"season sold\" factor\n",
-    "3. Reshaping categorical values from continuous variables (e.g., grade/condition)\n",
-    "4. Combining features, like ratio of basement space to living space\n",
-    "5. Creating a user input function\n",
+    "### Performance Metric\n",
+    "When evaluating several models, we chose to use a weighted-average \"Recall Score\" as our performance metric. This would enable us to most accurately predict which pumps were nonfunctional or needed repair. \n",
     "\n",
-    "***"
+    "###  Model Selection\n",
+    "We created a pipeline for our model that started with a SimpleImputer to clean values, OneHotEncoding to create numerical data out of the categoricals, and a KNN Imputer to fill in any remaining missing values. \n",
+    "\n",
+    "Then, after evaluating several classification models in scikit-learn (Logistic Regression, KNN Classifier, Decision Tree Classifier, XGBoost, Random Forest Classifier, and Naive Bayes), we settled upon DecisionTreeClassifier and RandomForests to give our most accurate recall. That resulted in the following:\n",
+    "\n",
+    "![Recall Score](Images/recall.png)\n",
+    "\n",
+    "In this image, the brown represents the accurately predicted nonfunctional water points, which all require maintenance, parts, etc. The red and blue represent situations in which the parts/maintenance supplier would be underprepared or overprepared in terms of resources (inefficient allocation). The green in the center was what we minimized. And the far right gray represents functional water points that we are not yet concerned with."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model & Prediction\n",
+    "### Feature Importance\n",
+    "After running the algorithm, we determined that the model would be most effective to understand and implement for potential parts/repair/maintenance firms if they understood which factors contributed the most to the predictions, so they are listed here:\n",
     "\n",
-    "We used the Ordinary Least Squares Regression to create a model which would help determine the most impactful factors and help us more accurately predict the prices.\n",
-    "\n",
-    "### Test Assumptions (Linearity, Multicollinearity)\n",
-    "In order for this model to work the most effectively, we evaluated it for linearity between factors, and multicollinearity between pairs of factors, which gave us the following:\n",
-    "\n",
-    "![Linearity](Images/linearity.png)\n",
-    "\n",
-    "\n",
-    "![Multicollinearity](Images/multicollinearity.png)\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Iterate and Evaluate Models\n",
-    "\n",
-    "After iterating through, and making adjustments to, and evaluating 3 regression models, we adopted the final one using the highest R-squared value as a measure of performance. With more time we could have further refined the model to account for what appears to be an exponential function from the residuals plot:\n",
-    "\n",
-    "![Residuals](Images/QQ_Residuals_Plot.png)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Predict Values with Example Inputs\n",
-    "\n",
-    "Given the model we produced, we were able to create functions that would take the user inputs and output a prediction. In this example, the potential client would input the numbers after the colon:\n",
-    "\n",
-    "\n",
-    "![Example Prediction](Images/example_prediction.png)\n",
-    "\n"
+    "![Feature Importance](Images/Feature-Importance.png)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions\n",
+    "## Conclusions and Takeaways\n",
     "\n",
-    "The most predictive factors in home price were:\n",
+    "Our objective was to reduce overhead costs by anticipating water pump maintenance status using a predictive model. In order to iteratively improve on the recall score for the model (and in turn achieve higher effectiveness) we:\n",
     "\n",
-    "### Location\n",
-    "Price would increase by  180k USD for top 5 school district, by 210k for homes outside the city, and 480k for homes on the waterfront\n",
+    "![Merry-Go-Gound](Images/conclusion.jpg)\n",
     "\n",
-    "![Great Location!](Images/seattle-2426307.jpg)\n",
+    "Improve maintenance planning & budgeting by:\n",
     "\n",
-    "### Home Size\n",
-    "Basement square footage is worth less than square footage above ground, and too many bedrooms could lower the value of the house.\n",
-    "\n",
-    "![Home Size](Images/sq_ft_living.png)\n",
-    "\n",
-    "### Quality\n",
-    "Homes with high grades (good architecture and build quality) are worth significantly more than lower grades, and homes in a very good condition have a relatively significant impact over just average homes.\n",
-    "\n",
-    "![Grade 6 vs Grade 12 Home](Images/grade6vs12.png)\n",
-    "\n",
-    "### When to Sell\n",
-    "Homes sold in spring/summer sold significantly more than those sold in fall/winter - presumably from that gloomy Seattle rain :-P\n",
-    "\n",
-    "![Seasons Sold Comparison Price](Images/mean_price_season_sold.png)"
+    "1. Using readily available categories of data\n",
+    "2. Applying data to our model\n",
+    "3. Model gives desired importance:\n",
+    "    1. 91% for pumps needing any maintenacne\n",
+    "    2. 78% for identifying level of maintenance\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Further Steps\n",
+    "### Areas to Improve:\n",
     "\n",
-    "### Internal to Data Science Team\n",
-    "With less of a time constraint, we would:\n",
+    "- Better computational resources\n",
+    "- Underlying data quality correlations\n",
+    "- Obtain more data for integrity control\n",
+    "- More sophisticated data correction\n",
+    "- Further feature optimization\n",
+    "- Informed feature engineering\n",
     "\n",
-    "1. Fix normality issues in model.\n",
-    "2. Fix heteroskedasticity issues in model.\n",
-    "3. Fix multicollinearity issues in model\n",
-    "4. Test effectiveness of model using test data.\n",
-    "5. Explore industry and create new features\n",
-    "5. Deploy consumer product\n",
+    "![improve](Images/improve.jpg)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Growth Opportunities\n",
     "\n",
-    "### For Real Estate Team\n",
-    "Given additional resources, we would recommend the following to the firm:\n",
+    "- Cautiously investigate applicability to other areas\n",
+    "- Develop lifetime estimations\n",
+    "- Invert model to identify demand for particulars\n",
+    "- Combine with economic models\n",
     "\n",
-    "1. Collect additional relevant data around other factors, using expertise\n",
-    "2. Open up to home prices above 1 million\n",
-    "3. Provide more time-relevant data\n"
+    "![Growth](Images/Growth.jpg)\n"
    ]
   },
   {
@@ -335,12 +305,17 @@
     "width": "377.975px"
    },
    "number_sections": true,
-   "sideBar": true,
+   "sideBar": false,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "485.926px",
+    "left": "1137.79px",
+    "top": "222.926px",
+    "width": "284.433px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   },
